# pod-ft

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.monolith.yml  docker-compose.vps.yml  docker-compose.yml  project-schema.yaml  pyproject.toml
.github/workflows/: ci-cd.yml
backend/apps/admin/: Dockerfile
backend/apps/admin/app/: main.py
backend/apps/answer_service/: Dockerfile
backend/apps/answer_service/app/: main.py
backend/apps/auth_billing/: Dockerfile
backend/apps/auth_billing/app/: __init__.py  main.py
backend/apps/changes/: Dockerfile
backend/apps/changes/app/: main.py
backend/apps/crawler/: Dockerfile
backend/apps/crawler/app/: main.py
backend/apps/doc_check/: Dockerfile
backend/apps/doc_check/app/: __init__.py  main.py
backend/apps/document_upload/: Dockerfile
backend/apps/document_upload/app/: __init__.py  main.py
backend/apps/drafting/: Dockerfile
backend/apps/drafting/app/: __init__.py  main.py
backend/apps/export/: Dockerfile
backend/apps/export/app/: __init__.py  main.py
backend/apps/gateway/: Dockerfile
backend/apps/gateway/app/: __init__.py  main.py
backend/apps/graph_service/: Dockerfile
backend/apps/graph_service/app/: main.py
backend/apps/obligation_extractor/: Dockerfile
backend/apps/obligation_extractor/app/: main.py
backend/apps/parser/: Dockerfile
backend/apps/retrieval/: Dockerfile
backend/apps/scheduler/: Dockerfile
backend/apps/source_registry/: Dockerfile
backend/apps/tenant_profile/: Dockerfile
backend/apps/vector_indexer/: Dockerfile
backend/apps/verification/: Dockerfile
backend/apps/versioning/: Dockerfile
backend/apps/workers/: Dockerfile
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py
backend/shared/: __init__.py  idempotency.py  logging.py  metrics.py  rate_limiter.py  security.py  settings.py
backend/shared/data/: seed_fragments.py
backend/shared/db/: __init__.py  base.py  neo4j.py  postgres.py  qdrant.py  redis.py
backend/shared/events/: __init__.py  outbox.py  schemas.py
backend/shared/llm/: __init__.py  contracts.py  provider_router.py
backend/shared/models/: __init__.py  enums.py  errors.py  fragments.py  ids.py
backend/shared/repositories/: __init__.py  base.py  repos.py
backend/shared/storage/: __init__.py  minio_client.py
backend/tests/: __init__.py
backend/tests/e2e/: test_deployment.py
backend/tests/unit/: conftest.py  test_admin.py  test_answer_service.py  test_auth_billing.py  test_changes.py  test_crawler.py  test_doc_check.py  test_document_upload.py  test_drafting.py  test_export.py  test_gateway_health.py  test_graph_service.py  test_llm_provider.py  test_llm_verifier.py  test_obligation_extractor.py  test_parser.py  test_prompts.py  test_rate_limiter.py  test_retrieval.py  test_scheduler.py  test_source_registry.py  test_tenant_profile.py  test_vector_indexer.py  test_verification.py  test_versioning.py  test_workers.py
data-pipelines/eval/: golden-citations.json  golden-questions.json  run_eval.py
docs/api/: internal-contracts.md
frontend/telegram/: Dockerfile  requirements.txt  settings.py
frontend/telegram/bot/: __init__.py  main.py
frontend/telegram/handlers/: __init__.py  commands.py  questions.py
frontend/telegram/keyboards/: __init__.py  reply.py
frontend/telegram/tests/: conftest.py  test_handlers.py
frontend/web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/web/src/: App.tsx  api.ts  main.tsx  style.css
frontend/web/tests/: App.test.tsx
infra/minio/: create-buckets.sh
infra/monitoring/prometheus/: prometheus.yml
infra/neo4j/: constraints.cypher
infra/nginx/: nginx-vps.conf  nginx.conf
infra/postgres/init/: init.sql
infra/scripts/: setup-cron.sh
infra/superset-init/: superset_config.py
scripts/: dev-up.sh  seed-tier1-sources.py
(+154 files in other folders)
