[project]
name = "podft-rag-platform"
version = "0.5.0"
description = "LLM RAG platform for Russian AML/CFT (ПОД/ФТ/ФРОМУ) regulatory compliance"
requires-python = ">=3.12"
authors = [{ name = "madoper" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "redis[hiredis]>=5.2.0",
    "email-validator>=2.2.0",
    "minio>=7.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "qdrant-client>=1.12.0",
    "neo4j>=5.23.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "fpdf2>=2.8.0",
    "python-multipart>=0.0.12",
    "prometheus-client>=0.21.0",
    "pymorphy2>=0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "python-telegram-bot>=21.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "EM", "TD"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"backend/apps/document_upload/app/routers/upload.py" = ["B008"]
"backend/migrations/versions/*.py" = ["E501"]
"backend/shared/data/**" = ["E501"]
"backend/tests/unit/test_doc_check.py" = ["EM101"]
"frontend/telegram/handlers/commands.py" = ["ARG001"]
"frontend/telegram/tests/conftest.py" = ["ARG002"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = false
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "backend.shared.metrics",
    "backend.shared.logging",
    "backend.shared.repositories.base",
    "backend.shared.idempotency",
    "backend.apps.export.app.services.export_service",
    "backend.apps.document_upload.app.services.upload_service",
    "backend.apps.doc_check.app.services.check_service",
    "backend.apps.auth_billing.app.routers.auth",
]
ignore_errors = true

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "frontend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests", "frontend/telegram/tests"]
python_files = ["test_*.py"]
